--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body>
     <%= tabs %>
+    <%= render 'layouts/messages' %>
 
     <%= yield %>
     <%= javascript_include_tag "application" %>
