--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,19 @@
-<h2>Change your password</h2>
+<%= render :partial => "devise/shared/header", :locals => {:message => "Change your password"} %>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password, :autofocus => true %></div>
+  <div class="row">
+    <div class="large-4 columns">
+      <%= f.label :password_confirmation, "new password" %>
+      <%= f.password_field :password, :autofocus => true %>
+    </div>
+  </div>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <%= render :partial => "devise/shared/password_confirmation", :locals => {:f => f} %>
 
-  <div><%= f.submit "Change my password" %></div>
+  <%= render :partial => "devise/shared/submit", :locals => {:f => f, :message => "Change my password"} %>
 <% end %>
 
 <%= render "devise/shared/links" %>
