--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,11 @@
-<h2>Forgot your password?</h2>
+<%= render :partial => "devise/shared/header", :locals => {:message => "Forgot your password?"} %>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= render :partial => "devise/shared/email", :locals => {:f => f} %>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <%= render :partial => "devise/shared/submit", :locals => {:f => f, :message => "Send me reset password instructions"} %>
 <% end %>
 
 <%= render "devise/shared/links" %>
