--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,30 +1,12 @@
-<div class="row">
-  <div class="columns">
-    <h2>Sign up</h2>
-  </div>
-</div>
+<%= render :partial => "devise/shared/header", :locals => {:message => "Sign up"} %>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <%= render :partial => "devise/shared/email_password", :locals => {:f => f} %>
+  <%= render :partial => "devise/shared/password_confirmation", :locals => {:f => f} %>
 
-  <div class="row">
-    <div class="large-4 columns">
-      <%= f.label :password_confirmation, "confirm password" %>
-      <%= f.password_field :password_confirmation %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="columns">
-      <%= f.submit "Sign up", :class => "button small radius" %>
-    </div>
-  </div>
+  <%= render :partial => "devise/shared/submit", :locals => {:f => f, :message => "Sign up"} %>
 <% end %>
 
-  <div class="row">
-    <div class="columns">
-      <%= render "devise/shared/links" %>
-    </div>
-  </div>
+<%= render "devise/shared/links" %>
