--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,12 +1,15 @@
-<h2>Resend unlock instructions</h2>
+<%= render :partial => "devise/shared/header", :locals => {:message => "Resend unlock instructions"} %>
 
 <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= render :partial => "devise/shared/email", :locals => {:f => f} %>
 
-  <div><%= f.submit "Resend unlock instructions" %></div>
+  <div class="row">
+    <div class="columns">
+      <%= f.submit "Resend unlock instructions", :class => "button small radius" %>
+    </div>
+  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
