--- a/app/views/devise/shared/_email.html.erb
+++ b/app/views/devise/shared/_email.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-4 columns">
-    <%= f.label :email %>
+    <%= f.label :email, "email" %>
     <%= f.email_field :email, :autofocus => true %>
   </div>
 </div>
