Styles tabs with foundation library

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,16 @@
   </head>
 
   <body>
-    <%= tabs %>
+    <div class="fixed" >
+      <nav class="top-bar" data-topbar>
+        <%= tabs %>
+      </nav>
+    </div>
     <%= render 'layouts/messages' %>
 
-    <%= yield %>
+    <div class="clearfix row">
+      <%= yield %>
+    </div>
     <%= javascript_include_tag "application" %>
   </body>
 </html>
