--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
 <h2 align="center">About the TripleWorld</h2>
+
+ <p align="center">
+ In the Lotus Sutra, the Buddha praises and is praised with the words "Excellent, Excellent." In Kumarajiva's translation, these words are "Zenzai Zenzai." This website is meant to help its users bring wisdom and peace into this world of ignorance and conflict.
+</p>
