--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,21 @@
-<%= render :partial => "devise/shared/header", :locals => {:message => "Change your password"} %>
+<div class="small-6 small-offset-1 columns">
+  <%= render :partial => "devise/shared/header", :locals => {:message => "Change your password"} %>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div class="row">
-    <div class="large-4 columns">
-      <%= f.label :password_confirmation, "new password" %>
-      <%= f.password_field :password, :autofocus => true %>
+    <div class="row">
+      <div class="large-4 columns">
+        <%= f.label :password_confirmation, "new password" %>
+        <%= f.password_field :password, :autofocus => true %>
+      </div>
     </div>
-  </div>
 
-  <%= render :partial => "devise/shared/password_confirmation", :locals => {:f => f} %>
+    <%= render :partial => "devise/shared/password_confirmation", :locals => {:f => f} %>
 
-  <%= render :partial => "devise/shared/submit", :locals => {:f => f, :message => "Change my password"} %>
-<% end %>
+    <%= render :partial => "devise/shared/submit", :locals => {:f => f, :message => "Change my password"} %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
