--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,11 +1,13 @@
-<%= render :partial => "devise/shared/header", :locals => {:message => "Forgot your password?"} %>
+<div class="small-6 small-offset-1 columns">
+  <%= render :partial => "devise/shared/header", :locals => {:message => "Forgot your password?"} %>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <%= render :partial => "devise/shared/email", :locals => {:f => f} %>
+    <%= render :partial => "devise/shared/email", :locals => {:f => f} %>
 
-  <%= render :partial => "devise/shared/submit", :locals => {:f => f, :message => "Send me reset password instructions"} %>
-<% end %>
+    <%= render :partial => "devise/shared/submit", :locals => {:f => f, :message => "Send me reset password instructions"} %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
