--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,15 +1,17 @@
-<%= render :partial => "devise/shared/header", :locals => {:message => "Resend unlock instructions"} %>
+<div class="small-6 small-offset-1 columns">
+  <%= render :partial => "devise/shared/header", :locals => {:message => "Resend unlock instructions"} %>
 
-<%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <%= render :partial => "devise/shared/email", :locals => {:f => f} %>
+    <%= render :partial => "devise/shared/email", :locals => {:f => f} %>
 
-  <div class="row">
-    <div class="columns">
-      <%= f.submit "Resend unlock instructions", :class => "button small radius" %>
+    <div class="row">
+      <div class="columns">
+        <%= f.submit "Resend unlock instructions", :class => "button small radius" %>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
