--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,9 @@
 <h2 align="center">About the TripleWorld</h2>
 
- <p align="center">
- In the Lotus Sutra, the Buddha praises and is praised with the words "Excellent, Excellent." In Kumarajiva's translation, these words are "Zenzai Zenzai." This website is meant to help its users bring wisdom and peace into this world of ignorance and conflict.
-</p>
+<div class="small-11 small-centered columns">
+  <div class="panel">
+    <p align="center">
+    The Buddha came into this world 2500 years ago to help us see the world for what it is and learn to benefit ourselves and others. He saw how we are attracted to the beautiful forms, fascinating ideas and consuming desires all around us and wanted us to be aware of how these are all like wisps of smoke, dreams and capricious whims. Yet we chose to come into this world to benefit others. When we learn to see the world for what it is, through the teachings of the Lotus Sutra and under the guidance of Nichiren, we find more beauty and contentment than we thought possible.
+    </p>
+    <div>
+<div>
