--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,11 @@
-<h2 align="center">Welcome to the TripleWorld</h2>
+<div class="small-11 small-centered columns">
+  <h2 align="center">Welcome to the TripleWorld</h2>
+
+  <div class="panel">
+    <p><i><%= @jewel.quote.gsub("\u2028", "<br>").html_safe %></i></p>
+  </div>
+
+  <div class="panel">
+    <p><%= @jewel.comment %></p>
+  </div>
+</div>
