--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require foundation_and_overrides
+ *= require dataTables/jquery.dataTables.foundation
  *= require zenzai
 
  *= require_tree .
