--- a/app/views/jewels/index.html.erb
+++ b/app/views/jewels/index.html.erb
@@ -7,6 +7,7 @@
         <th>Citation</th>
         <th>Quote</th>
         <th>Comment</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -17,6 +18,7 @@
           <td><%= presenter.trim_citation(20) %></td>
           <td><%= presenter.trim_quote(20) %></td>
           <td><%= presenter.trim_comment(20) %></td>
+          <td><%= link_to "Edit", edit_jewel_path(presenter.id) %></td>
         </tr>
       <% end %>
     </tbody>
