Adds mailclerk class and mechanisms for delivering email

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,10 +2,10 @@
   <h2 align="center">Welcome to the TripleWorld</h2>
 
   <div class="panel">
-    <p><i><%= @jewel.quote.gsub("\u2028", "<br>").html_safe %></i></p>
+    <p><i><%= @jewel_presenter.html_quote %></i></p>
   </div>
 
   <div class="panel">
-    <p><%= @jewel.comment %></p>
+    <p><%= @jewel_presenter.comment %></p>
   </div>
 </div>
