Fixes errors in html. Adds css class to center text

--- a/app/assets/stylesheets/zenzai.css.scss
+++ b/app/assets/stylesheets/zenzai.css.scss
@@ -1,5 +1,12 @@
 body {
-  color: #333333
+  color: #333333;
+  margin: 0;
+  padding: 0;
+}
+
+.center
+{
+  text-align: center;
 }
 
 .horizontal-list li
