--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,11 +1,11 @@
 <% unless flash[:notice].blank? %>
-  <div data-alert class="alert-box clear" %>
+  <div data-alert class="alert-box clear">
     <br>
     <p class="notice"><%= notice %></p>
   </div>
 <% end %>
 <% unless flash[:alert].blank? %>
-  <div data-alert class="alert-box warning clear" %>
+  <div data-alert class="alert-box warning clear">
     <br>
     <p><%= alert %></p>
   </div>
