--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -1,18 +1,18 @@
-<h2 align="center">Support for the TripleWorld</h2>
+<h2 class="center">Support for the TripleWorld</h2>
 
 <div class="small-10 small-centered columns">
   <div class="panel radius">
-    <p align="center">
+    <p class="center">
     Financial support for this site comes from the Lexington Nichiren Buddhist Community and a grant from Heroku. If you would like to help support the site, or have any questions, please email the site <a href="mailto:admin@zenzaizenzai.com"> administrator</a>.
     </p>
   </div>
   <div class="panel radius">
-    <p align="center">
+    <p class="center">
     The site is built using <a href="http://rubyonrails.org">Rails</a> and is secured with SSH. No personal information of anyone registered on the site, including email addresses, is ever given away or sold.
     </p>
   </div>
   <div class="panel radius">
-    <p align="center">
+    <p class="center">
     Quotes from the <a href="http://www.uhpress.hawaii.edu/p-9062-9780971964563.aspx">Lotus Sutra</a> are taken from Bishop Senchu Murano's translation, Third Edition, published in 2012. Quotes from Nichiren are taken from the <a href="http://www.uhpress.hawaii.edu/p-3602-9780824829315.aspx">Writings of Nichiren Shonin</a>. All quotes are reproduced with permission from the Murano family and NOPPA. Commentary on the Lotus Sutra and Nichren's Writings is by Rev. Shinkyo Warner, copyright 2012, and may not be reproduced without permission.
     </p>
   </div>
