--- a/app/views/pages/zenzai.html.erb
+++ b/app/views/pages/zenzai.html.erb
@@ -1,8 +1,8 @@
-<h2 align="center">Zenzai Zenzai!</h2>
+<h2 class="center">Zenzai Zenzai!</h2>
 
 <div class="small-11 small-centered columns">
   <div class="panel">
-    <p align="center">
+    <p class="center">
     In the Lotus Sutra, the Buddha praises and is praised with the words "Excellent, Excellent!" In Kumarajiva's translation, these words are "Zenzai Zenzai!"<br> <br>When we hear the Buddha teaching us through all the circumstances in our lives, we hear him encouraging us in our practice and learn to encourage each other as we bring the Buddha's teachings to life.
     </p>
     </div>
