--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,7 +20,8 @@
 
     <div class="row">
       <div class="large-4 columns">
-        <%= f.label :password, "password" %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.label :password, "password" %>
+        <%= f.label :password, "(leave blank if you don't want to change it)" %>
         <%= f.password_field :password, :autocomplete => "off" %>
       </div>
     </div>
@@ -29,7 +30,8 @@
 
     <div class="row">
       <div class="large-4 columns">
-        <%= f.label :current_password, "current password" %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.label :current_password, "current password" %>
+        <%= f.label :current_password, "(we need your current password to confirm your changes)" %>
         <%= f.password_field :current_password %>
       </div>
     </div>
@@ -47,8 +49,9 @@
 
   <div class="row">
     <div class="columns">
-      Are you sure you want to leave us? <br /><%= button_to "Cancel my account", registration_path(resource_name), :class => "button alert radius", 
-                                                     :data => { :confirm => "Are you sure?" }, :method => :delete %>
+      <p>Are you sure you want to leave us?</p>
+      <%= button_to "Cancel my account", registration_path(resource_name), :class => "button alert radius", 
+                                         :data => { :confirm => "Are you sure?" }, :method => :delete %>
     </div>
   </div>
 
