Adds instructions for unsubscribing   To home page and emails

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,6 +14,7 @@
     <p><a href=<%= "#{new_user_registration_path}" %>>Sign Up</a> to receive daily emails with quotes from the Lotus Sutra and Nichiren Shonin.</p>
     <p>You will receive a confirmation email to make sure we know how to find you. Just follow the instructions in that note.</p>
     <p>If have any questions, please email the site <a href="mailto:admin@zenzaizenzai.com"> administrator</a>.</p>
+    <p>To unsubscribe from emails or cancel your account, edit your <a href=<%= "#{edit_user_registration_path}" %>>Profile</a> page.</p>
   </div>
 
 </div>
