--- a/app/views/user_mailer/daily_dharma.html.erb
+++ b/app/views/user_mailer/daily_dharma.html.erb
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
     <p><i><%= @jewel_presenter.html_quote %> </i></p>
     <p><%= @jewel_presenter.comment %> </p>
+    <hr>
+    <p> Use this <a href=<%= "#{edit_user_registration_url}" %>>link</a> to unsubscribe</p>
   </body>
 </html>
